# fsrs-rs-python

./: .ruff.toml  Cargo.toml  README.md  example.py  fsrs_rs_python.pyi  pyproject.toml
.github/workflows/: CI.yml  autofix.yml  lint.yml
.idx/: dev.nix
examples/: schedule.py  simulate.py  train_csv.py
python/fsrs_rs_python/: __init__.pyi
src/: lib.rs  simulator_config.rs
