[package]
name = "fsrs-rs-python"
version = "0.8.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fsrs_rs_python"
crate-type = ["cdylib"]

[dependencies.fsrs]
# version = "2.0.4"
# path = "../fsrs-rs"
git = "https://github.com/open-spaced-repetition/fsrs-rs.git"
rev = "932bb7af282f918bc5b997f74ece77942eb89b96"

[dependencies]
pyo3 = "0.24.0"
